--- a/www/templates/transactions.html
+++ b/www/templates/transactions.html
@@ -1,22 +1,20 @@
-<div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Description</th>
-        <th>Category</th>
-        <th>Tags</th>
-        <th>Amount</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>14 Apr</td>
-        <td>Gh Githubcom Usa Usd Incl Westpac Foreign Transaction Fee Aud</td>
-        <td>Rent/Mortgage</td>
-        <td>work, tech, deductible</td>
-        <td>$9.44</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<table st-table="rowCollection" class="table table-striped">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Description</th>
+      <th>Category</th>
+      <th>Tags</th>
+      <th>Amount</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="row in rowCollection">
+      <td>{{ row.firstName }}</td>
+      <td>{{ row.lastName }}</td>
+      <td>{{ row.birthDate }}</td>
+      <td>{{ row.balance }}</td>
+      <td>{{ row.email }}</td>
+    </tr>
+  </tbody>
+</table>
