--- a/www/templates/transactions.html
+++ b/www/templates/transactions.html
@@ -1,20 +1,35 @@
+<form>
+  <label for="predicate">selected predicate:</label>
+  <select class="form-control" id="predicate" ng-model="selectedPredicate" ng-options="predicate for predicate in predicates"></select>
+</form>
+
 <table st-table="rowCollection" class="table table-striped">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Description</th>
-      <th>Category</th>
-      <th>Tags</th>
-      <th>Amount</th>
+      <th st-sort="date">date</th>
+      <th st-sort="description">description</th>
+      <th st-sort="category">category</th>
+      <th st-sort="tags">tags</th>
+      <th st-sort="amount">amount</th>
+    </tr>
+    <tr>
+      <th>
+        <input st-search="category" placeholder="search for category" class="input-sm form-control" type="search"/>
+      </th>
+      <th colspan="3">
+        <input st-search placeholder="global search" class="input-sm form-control" type="search"/>
+      </th>
+      <th>
+        <input st-search="{{ selectedPredicate }}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
+      </th>
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="row in rowCollection">
-      <td>{{ row.firstName }}</td>
-      <td>{{ row.lastName }}</td>
-      <td>{{ row.birthDate }}</td>
-      <td>{{ row.balance }}</td>
-      <td>{{ row.email }}</td>
-    </tr>
+  <tr ng-repeat="row in rowCollection">
+    <td>{{ row.date | date }}</td>
+    <td>{{ row.description }}</td>
+    <td>{{ row.category }}</td>
+    <td>{{ row.tags }}</td>
+    <td>{{ row.amount | currency }}</td
   </tbody>
 </table>
