--- a/www/css/app.css
+++ b/www/css/app.css
@@ -10,3 +10,11 @@
   width: 100%;
   height: 100%;
 }
+
+.st-sort-ascent:after{
+  content: '\25B2';
+}
+
+.st-sort-descent:after{
+  content: '\25BC';
+}
