--- a/www/templates/transactions.html
+++ b/www/templates/transactions.html
@@ -1,8 +1,3 @@
-<form>
-  <label for="predicate">selected predicate:</label>
-  <select class="form-control" id="predicate" ng-model="selectedPredicate" ng-options="predicate for predicate in predicates"></select>
-</form>
-
 <table st-table="rowCollection" class="table table-striped">
   <thead>
     <tr>
@@ -13,14 +8,9 @@
       <th st-sort="amount">amount</th>
     </tr>
     <tr>
-      <th>
-        <input st-search="category" placeholder="search for category" class="input-sm form-control" type="search"/>
-      </th>
-      <th colspan="3">
-        <input st-search placeholder="global search" class="input-sm form-control" type="search"/>
-      </th>
-      <th>
-        <input st-search="{{ selectedPredicate }}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
+      <th colspan="3">&nbsp;</th>
+      <th colspan="2">
+        <input st-search placeholder="Search" class="input-sm form-control" type="search"/>
       </th>
     </tr>
   </thead>
