--- a/www/templates/analyse.html
+++ b/www/templates/analyse.html
@@ -1,1 +1,6 @@
-<nvd3 options="options" data="data"></nvd3>
+<div class="btn-group" role="group">
+  <a ui-sref=".bar" type="button" class="btn btn-default">Bar Chart</a>
+  <a ui-sref=".donut" type="button" class="btn btn-default">Donut Chart</a>
+</div>
+
+<div ui-view></div>
