Add icons to categories accordion

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="CategoryAccordionCtrl">
+<div ng-controller="CategoryAccordionCtrl" id="category-accordion">
   <accordion close-others="true">
     <!-- FIXME anyone know how to interpolate some html into the {{ curlies }}??? -->
     <accordion-group heading="{{ category.title }}" ng-repeat="category in categories">
