--- a/www/css/app.css
+++ b/www/css/app.css
@@ -2,6 +2,7 @@ body {
   background: white;
 }
 
+/* stretchy about page image */
 .prize {
   width: 100%;
   height: 100%;
@@ -15,6 +16,7 @@ body {
   height: 100%;
 }
 
+/* transaction list sort direction icons */
 .st-sort-ascent:after{
   content: '\25B2';
 }
@@ -22,3 +24,77 @@ body {
 .st-sort-descent:after{
   content: '\25BC';
 }
+
+/* category list styles */
+
+.accordion-toggle {
+  display: block;
+}
+
+/* individual transaction/category boxes */
+.payment_box {
+  border-width: 0.69px;
+  border-color: rgb(215, 215, 215);
+  border-style: solid;
+  border-radius: 6px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+  position: absolute;
+  left: 210px;
+  top: 366px;
+  width: 781px;
+  height: 74px;
+  z-index: 41;
+}
+
+/* coloured history/detail boxes */
+.history_detail {
+  border-width: 2px;
+  border-color: rgb(152, 223, 137); /* colour needs to be customised */
+  border-style: solid;
+  border-radius: 6px;
+  position: absolute;
+  left: 210px;
+  top: 526px;
+  width: 777px;
+  height: 70px;
+  z-index: 103;
+}
+
+/* flyout/more actions */
+.more_function {
+  border-width: 1px;
+  border-color: rgb(215, 215, 215);
+  border-style: solid;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+  position: absolute;
+  left: 813px;
+  top: 511px;
+  width: 198px;
+  height: 192px;
+  z-index: 131;
+}
+
+/*
+  ANZ header
+  dark blue (left of logo): #004165
+  mid blue (right of logo): #007dba
+
+  Background
+  grey background slide: #f1f1f
+*/
+
+/* FIXME ugly hack to workaround html sanitization issues with the ui-bootstrap accordion */
+#category-accordion .panel-heading {
+  padding-left: 40px;
+}
+#category-accordion .panel:nth-child(1) .panel-heading { background: url('../img/svg/utilities.svg') no-repeat; }
+#category-accordion .panel:nth-child(2) .panel-heading { background: url('../img/svg/super.svg') no-repeat; }
+#category-accordion .panel:nth-child(3) .panel-heading { background: url('../img/svg/membership.svg') no-repeat; }
+#category-accordion .panel:nth-child(4) .panel-heading { background: url('../img/svg/entertainment.svg') no-repeat; }
+#category-accordion .panel:nth-child(5) .panel-heading { background: url('../img/svg/car-loan.svg') no-repeat; }
+#category-accordion .panel:nth-child(6) .panel-heading { background: url('../img/svg/rent-mortgage.svg') no-repeat; }
+#category-accordion .panel:nth-child(7) .panel-heading { background: url('../img/svg/medical.svg') no-repeat; }
+#category-accordion .panel:nth-child(8) .panel-heading { background: url('../img/svg/misc.svg') no-repeat; }
+#category-accordion .panel:nth-child(9) .panel-heading { background: url('../img/svg/more.svg') no-repeat; }
