--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,3 +1,9 @@
+<form class="payd-form">
+  <div class="input-group input-group-lg">
+    <span class="input-group-addon" id="sizing-addon1">@</span>
+    <input type="text" class="form-control" placeholder="Search for" aria-describedby="sizing-addon1" ng-keypress="search()">
+  </div>
+</form>
 <div ng-controller="CategoryAccordionCtrl" id="category-accordion">
   <accordion close-others="true">
     <!-- FIXME anyone know how to interpolate some html into the {{ curlies }}??? -->
