--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,7 +9,17 @@
     <!-- FIXME anyone know how to interpolate some html into the {{ curlies }}??? -->
     <accordion-group heading="{{ category.title }}" ng-repeat="category in categories">
       <ul class="list-unstyled">
-        <li ng-repeat="transaction in category.content.transactions">{{transaction.name}}</li>
+        <li class="transaction" ng-repeat="transaction in category.content.transactions">
+          <div class="media">
+            <div class="media-object pull-right">
+              {{'$' + transaction.amount.toFixed(2)}}
+            </div>
+            <div class="media-body">
+              {{transaction.date}}
+              {{transaction.description}}
+            </div>
+          </div>
+        </li>
       </ul>
     </accordion-group>
   </accordion>
