--- a/www/css/app.css
+++ b/www/css/app.css
@@ -106,7 +106,7 @@ body {
   border-color: rgb(152, 223, 137); /* colour needs to be customised */
   border-style: solid;
   /*border-radius: 6px;*/
-  
+
 }
 
 /* flyout/more actions */
@@ -131,13 +131,43 @@ body {
   margin-bottom:15px;
 }
 
-
-.transaction {
-  padding-bottom:10px;
-  border-bottom:solid 1px #ccc;
-
+.list-transaction {
+  margin-top:10px;
+  margin-bottom:5px;
 }
 
+.transaction {
+  padding:10px;
+
+  border-radius: 5px;
+  background:#eee;
+  border:solid 1px #ccc;
+
+
+  color: #5C5C5C;
+  font-size:18px;
+}
+
+.transaction + .transaction {
+  margin-top:10px;
+}
+
+.list-transaction .transaction:last-child {
+  border-bottom:0;
+}
+
+.panel-group .panel {
+  border:0;
+  background: transparent;
+}
+
+.panel-group .panel .panel-heading {
+}
+
+.panel-group .panel .panel-body {
+  border:0 !important;
+  padding:0;
+}
 /*
   ANZ header
   dark blue (left of logo): #004165
@@ -151,12 +181,12 @@ body {
 #category-accordion .panel-heading {
   padding-left: 40px;
 }
-#category-accordion .panel:nth-child(1) .panel-heading { background: url('../img/svg/rent-mortgage.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(2) .panel-heading { background: url('../img/svg/super.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(3) .panel-heading { background: url('../img/svg/utilities.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(4) .panel-heading { background: url('../img/svg/car-loan.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(5) .panel-heading { background: url('../img/svg/membership.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(6) .panel-heading { background: url('../img/svg/entertainment.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(7) .panel-heading { background: url('../img/svg/medical.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(8) .panel-heading { background: url('../img/svg/misc.svg') 6px no-repeat; }
-#category-accordion .panel:nth-child(9) .panel-heading { background: url('../img/svg/more.svg') 6px no-repeat; }
+#category-accordion .panel:nth-child(1) .panel-heading { background: url('../img/svg/rent-mortgage.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(2) .panel-heading { background: url('../img/svg/super.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(3) .panel-heading { background: url('../img/svg/utilities.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(4) .panel-heading { background: url('../img/svg/car-loan.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(5) .panel-heading { background: url('../img/svg/membership.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(6) .panel-heading { background: url('../img/svg/entertainment.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(7) .panel-heading { background: url('../img/svg/medical.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(8) .panel-heading { background: url('../img/svg/misc.svg') 6px no-repeat #fff; }
+#category-accordion .panel:nth-child(9) .panel-heading { background: url('../img/svg/more.svg') 6px no-repeat #fff; }
