--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -15,7 +15,9 @@
               {{'$' + transaction.amount.toFixed(2)}}
             </div>
             <div class="media-body">
-              {{transaction.date}}
+              <span class="transaction-date">
+                {{transaction.date}}
+              </span>
               {{transaction.description}}
             </div>
           </div>
