--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,6 +10,21 @@
     <accordion-group heading="{{ category.title }}" ng-repeat="category in categories">
       <ul class="list-unstyled list-transaction">
         <li class="transaction" ng-repeat="transaction in category.content.transactions">
+          <div class="dropdown transaction-dropdown pull-right" dropdown>
+            <a class="glyphicon glyphicon-option-vertical dropdown-toggle" dropdown-toggle></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="">Archive</a>
+              </li>
+              <li>
+                <a href="">Tag</a>
+              </li>
+              <li role="presentation" class="dropdown-header">Move to</li>
+              <li>
+                <a href="">Rent/Mortgage</a>
+              </li>
+            </ul>
+          </div>
           <div class="media">
             <div class="media-object pull-right">
               {{'$' + transaction.amount.toFixed(2)}}
