--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,7 +8,7 @@
 
     <form class="payd-form">
       <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1">@</span>
+        <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
         <input type="text" class="form-control" placeholder="Search for" aria-describedby="sizing-addon1" ng-keypress="search()">
       </div>
     </form>
