--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,17 +1,16 @@
 <div class="header">
   <div class="container">
     <h1>Categories</h1>
-  </div>
-</div>
-<section class="categories">
-  <div class="container">
-
-    <form class="payd-form">
-      <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1">@</span>
+    <form class="payd-form pull-right">
+      <div class="input-group">
         <input type="text" class="form-control" placeholder="Search for" aria-describedby="sizing-addon1" ng-keypress="search()">
       </div>
     </form>
+  </div>
+
+</div>
+<section class="categories">
+  <div class="container">
     <div ng-controller="CategoryAccordionCtrl" id="category-accordion">
       <accordion close-others="true">
         <!-- FIXME anyone know how to interpolate some html into the {{ curlies }}??? -->
