--- a/www/css/app.css
+++ b/www/css/app.css
@@ -37,8 +37,7 @@ body {
 .navbar-default .navbar-nav > li > a {
   color: #fff;
   line-height: 40px;
-  padding-top: 0;
-  padding-bottom: 0;
+  padding: 0 5px;
 }
 
 .navbar .navbar-brand {
@@ -205,6 +204,11 @@ body {
 .categories {
   padding:50px 0;
   background:#f1f1f1;
+}
+
+.graph img {
+  height: 35px;
+  width: 35px;
 }
 
 /*
