--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,8 +2,10 @@
   <div class="container">
     <h1>Categories</h1>
     <form class="payd-form pull-right">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search for" aria-describedby="sizing-addon1" ng-keypress="search()">
+      <div>
+        <div class="right-inner-addon">
+        <i class="glyphicon glyphicon-search"></i>
+        <input type="search" class="form-control" placeholder="Search" />
       </div>
     </form>
   </div>
