--- a/transaction/paymentWeb/src/main/webapp/templates/analyse.html
+++ b/transaction/paymentWeb/src/main/webapp/templates/analyse.html
@@ -1,6 +1,3 @@
-<div class="btn-group" role="group">
-  <a ui-sref=".donut" type="button" class="btn btn-default">Donut Chart</a>
-  <a ui-sref=".bar" type="button" class="btn btn-default">Bar Chart</a>
+<div class="container">
+  <div ui-view></div>
 </div>
-
-<div ui-view></div>
